# repro512

./: .travis.yml  WORKSPACE
jvm-toxcore-api/: BUILD.bazel
mytest/: BUILD.bazel  MyTest.scala
tools/bazelrc/: linux-clang
